--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
     <link rel="stylesheet" href="styles.css">
     <title>Eduford-University-Website design</title>
     
@@ -17,7 +16,7 @@
 <body>
     <section class="header">
      <nav>
-        <a href="index.html"><img src="https://rj7nr.csb.app/images/logo.png" alt=""></a>
+        <a href="index.html"><img src="https://rj7nr.csb.app/images/logo.png" alt="" ></a>
 
         <div class="nav-links" id="navlinks">
             <i class="fa fa-times" onclick="hidemenu()"></i>
@@ -71,19 +70,19 @@
 
         <div class="row">
             <div class="campus-col">
-                <img src="images/london.jpg" alt="">
+                <img src="images/london.jpg" alt="" >
                 <div class="layer">
                     <h3>LONDON</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="images/pak.jpg" alt="">
+                <img src="images/pak.jpg" alt="" >
                 <div class="layer">
                     <h3>PAKISTAN</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="images/new-y.jpg" alt="">
+                <img src="images/new-y.jpg" alt="" >
                 <div class="layer">
                     <h3>NEW YORK</h3>
                 </div>
@@ -99,17 +98,17 @@
 
                 <div class="row">
                     <div class="facilities-col">
-                     <img src="images/library.jpg" alt="">   
+                     <img src="images/library.jpg" alt="" >   
                      <h3>University Library</h3>
                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>   
                     </div>
                     <div class="facilities-col">
-                     <img src="images/be-ga.jpg" alt="">   
+                     <img src="images/be-ga.jpg" alt="" >   
                      <h3>Beautiful Garden</h3>
                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>   
                     </div>
                     <div class="facilities-col">
-                     <img src="images/par-area.jpg" alt="">   
+                     <img src="images/par-area.jpg" alt="" >   
                      <h3>Parking Area</h3>
                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>   
                     </div>
@@ -123,7 +122,7 @@
 
                 <div class="row">
                     <div class="testimonial-col">
-                <img src="images/adil.jpg" alt="">
+                <img src="images/adil.jpg" alt="" >
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime a cupiditate sit! Facilis ducimus maiores perferendis atque laboriosam nam animi excepturi, sit autem id dicta delectus quibusdam aut obcaecati magnam.</p>
                     <h3>M.ADIL</h3>
@@ -134,7 +133,7 @@
                 </div>
                     </div>
                     <div class="testimonial-col">
-                <img src="images/amee.jpg" alt="">
+                <img src="images/amee.jpg" alt="" >
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime a cupiditate sit! Facilis ducimus maiores perferendis atque laboriosam nam animi excepturi, sit autem id dicta delectus quibusdam aut obcaecati magnam.</p>
                     <h3>AMEE</h3>
